# osmand-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  schema.sql
frontend/: main.ts  server.ts
src/: main.rs
