[package]
name = "osmand-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1.8", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
driftwood = "0.0.6"
ulid = { version = "0.5.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5.9", features = [ "runtime-async-std-rustls", "sqlite", "chrono" ] }
serde_qs = "0.8.5"
tide-tera = "0.2.4"
tera = "1.15.0"
rust-argon2 = "1.0.0"
log = "0.4.16"
